--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,9 @@
   },
   "author": "2U",
   "license": "UNLICENSED",
+  "engines": {
+    "node": "14.x"
+  },
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
