--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
   "author": "2U",
   "license": "UNLICENSED",
   "engines": {
-    "node": "14.x"
+    "npm": "9.6.7",
+    "node": "18.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
