--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "mini-css-extract-plugin": "^2.7.6",
     "nodemon": "^2.0.4",
     "webpack-cli": "^5.1.4"
+  },
+  "engines": {
+    "npm": "10.2.4",
+    "node": "18.17.1"
   }
 }
