--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,9 @@
     },
     "devDependencies": {
         "nodemon": "^2.0.4"
+    },
+    "engines": {
+        "npm": "10.2.4",
+        "node": "18.17.1"
     }
 }
